Fix card resize bug on tablet screens

--- a/styles/Container.less
+++ b/styles/Container.less
@@ -63,38 +63,38 @@ html, body, #app, #Container {
     #Handler {
         flex: 1;
 
-        &::-webkit-scrollbar {
-          width: 12px;
-          height: 12px;
-        }
-        &::-webkit-scrollbar-button {
-          width: 0px;
-          height: 0px;
-        }
-        &::-webkit-scrollbar-thumb {
-          background: #333;
-          border: none;
-          border-radius: 0;
-        }
-        &::-webkit-scrollbar-thumb:hover {
-          background: #222;
-        }
-        &::-webkit-scrollbar-thumb:active {
-          background: #111;
-        }
-        &::-webkit-scrollbar-track {
-          background: rgb(212, 212, 213);
-          border: 0px none #ffffff;
-        }
-        &::-webkit-scrollbar-track:hover {
-          background: rgb(212, 212, 213);
-        }
-        &::-webkit-scrollbar-track:active {
-          background: rgb(212, 212, 213);
-        }
-        &::-webkit-scrollbar-corner {
-          background: transparent;
-        }
+        // &::-webkit-scrollbar {
+        //   width: 12px;
+        //   height: 12px;
+        // }
+        // &::-webkit-scrollbar-button {
+        //   width: 0px;
+        //   height: 0px;
+        // }
+        // &::-webkit-scrollbar-thumb {
+        //   background: #333;
+        //   border: none;
+        //   border-radius: 0;
+        // }
+        // &::-webkit-scrollbar-thumb:hover {
+        //   background: #222;
+        // }
+        // &::-webkit-scrollbar-thumb:active {
+        //   background: #111;
+        // }
+        // &::-webkit-scrollbar-track {
+        //   background: rgb(212, 212, 213);
+        //   border: 0px none #ffffff;
+        // }
+        // &::-webkit-scrollbar-track:hover {
+        //   background: rgb(212, 212, 213);
+        // }
+        // &::-webkit-scrollbar-track:active {
+        //   background: rgb(212, 212, 213);
+        // }
+        // &::-webkit-scrollbar-corner {
+        //   background: transparent;
+        // }
     }
 
 }
