--- a/styles/VisitList.less
+++ b/styles/VisitList.less
@@ -6,8 +6,8 @@
             border-left: 10px solid #D4D4D4;
             border-right: 1px solid #D4D4D4;
         }
-
-        @media only screen and (max-width: 1144px) {
+        
+        @media only screen and (max-width: 767px) {
             .ui.stackable.cards {
                 margin-top: 0.2em;
                 margin-bottom: 0.2em;
